--- a/Src/SensorsInCloud.App/SensorsInCloud.App/MainPage.xaml
+++ b/Src/SensorsInCloud.App/SensorsInCloud.App/MainPage.xaml
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:SensorsInCloud.App"
-             x:Class="SensorsInCloud.App.MainPage">
+			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:local="clr-namespace:SensorsInCloud.App"
+			 x:Class="SensorsInCloud.App.MainPage">
 
-	<Label Text="Welcome to Xamarin Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+	<StackLayout>
+		<Image x:Name="Image1" HorizontalOptions="Center"   WidthRequest="100" HeightRequest="100"/>
+		<Image x:Name="Image2" HorizontalOptions="Center"   WidthRequest="100" HeightRequest="100"/>
+	</StackLayout>
 
 </ContentPage>
